--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
       <button type="submit" class="form-btn">search</button>
     </form>
     <ul class="gallery-list"></ul>
+
+    <div class="loader hidden"></div>
     <script src="./main.js" type="module"></script>
   </body>
 </html>
