--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <form class="form">
       <input class="form-input" name="userInput" type="text" />
-      <button type="submit" class="form-btn">search</button>
+      <button type="submit" class="form-btn">Search</button>
     </form>
     <ul class="gallery-list"></ul>
 
